
dnl -*- autoconf -*-
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)

AC_INIT([hyrax], [1.14.0], [support@opendap.org])

AC_CONFIG_SRCDIR([configure.ac])

AC_CONFIG_AUX_DIR(conf)
AC_CONFIG_MACRO_DIR([conf])

AM_INIT_AUTOMAKE

AC_CONFIG_SUBDIRS(olfs libdap4 bes)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
